Tests/Fail/Test011.ML
(* Tests for exporting local datatypes. All these examples are invalid in ML97. *)

let datatype t = C in C end;
